# FaceRecognitionServer

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.CodeCoverage  README.md  build.sh  client.cpp  main.cpp  server.cpp
.github/workflows/: build-code-coverage-ubuntu-20-04.yml  build-debug-ms-windows.yml  build-debug-ubuntu-20-04.yml  build-manual-code-coverage-ubuntu-20-04.yml  build-manual-debug-ubuntu-20-04.yml  build-manual-ms-windows.yml
Client/: CMakeLists.txt
Client/include/: faceDetectionUdpClient.h  faceRecognitionUdpClient.h  udpClient.h
Client/src/: faceDetectionUdpClient.cpp  faceRecognitionUdpClient.cpp  udpClient.cpp
Client/test/: CMakeLists.txt  test_udp_client.cpp
Common/: CMakeLists.txt
Common/ApplicationMessages/: CMakeLists.txt
Common/ApplicationMessages/include/: applicationMessages.h  faceDetectionRequest.h  faceDetectionResponse.h  faceRecognitionRequest.h  faceRecognitionResponse.h
Common/ApplicationMessages/mock/: CMakeLists.txt  mockApplicationMessages.cpp  mockApplicationMessages.h
Common/ApplicationMessages/src/: applicationMessages.cpp  faceDetectionRequest.cpp  faceDetectionResponse.cpp  faceRecognitionRequest.cpp  faceRecognitionResponse.cpp  utils.cpp  utils.h
Common/ApplicationMessages/test/: CMakeLists.txt  test_application_messages.cpp
Common/MessageReceiver/: CMakeLists.txt
Common/MessageReceiver/include/: iMessageReceiver.h  messageReceiverBuilder.h  messageReceiverFactory.h  messageReceiverInterface.h  parallelMessageReceiver.h
Common/MessageReceiver/mock/: CMakeLists.txt  mockMessageReceiver.cpp  mockMessageReceiver.h  mockMessageReceiverFactory.cpp  mockMessageReceiverFactory.h
Common/MessageReceiver/src/: iMessageReceiver.cpp  messageReceiverBuilder.cpp  messageReceiverFactory.cpp  messageReceiverInterface.cpp  parallelMessageReceiver.cpp  udpMessageReceiver.cpp  udpMessageReceiver.h  udpParallelMessageReceiver.cpp  udpParallelMessageReceiver.h
Common/MessageReceiver/test/: CMakeLists.txt  test_message_receiver.cpp
Common/MessageSender/: CMakeLists.txt
Common/MessageSender/include/: messageSenderFactory.h  messageSenderInterface.h  udpMessageSender.h
Common/MessageSender/mock/: CMakeLists.txt  mockUdpMessageSender.cpp  mockUdpMessageSender.h
Common/MessageSender/src/: messageSenderFactory.cpp  udpMessageSender.cpp  udpMessageSender.h
Common/MessageSender/test/: CMakeLists.txt  test_message_sender.cpp
Common/SocketManager/: CMakeLists.txt
Common/SocketManager/include/: socketManager.h
Common/SocketManager/src/: socketManager.cpp
Common/SocketManager/test/: CMakeLists.txt  test_socket_manager.cpp
Common/Types/: CMakeLists.txt  endpoint.h
Common/Types/include/: endpoint.h  image.h  rect.h  serializable.h
Common/Types/src/: endpoint.cpp  image.cpp  rect.cpp
Common/Types/test/: CMakeLists.txt  test_endpoint.cpp
Common/UdpSocket/: CMakeLists.txt
Common/UdpSocket/include/: udpSocket.h
Common/UdpSocket/mock/: CMakeLists.txt  mockUdpSocket.cpp  mockUdpSocket.h
Common/UdpSocket/src/: udpSocket.cpp
Common/UdpSocket/test/: CMakeLists.txt  test_udp_socket.cpp
Common/UdpSocketFactory/: CMakeLists.txt
Common/UdpSocketFactory/include/: udpSocketFactory.h
Common/UdpSocketFactory/mock/: CMakeLists.txt  mockUdpSocketFactory.cpp  mockUdpSocketFactory.h
Common/UdpSocketFactory/src/: udpSocketFactory.cpp
Common/UdpSocketFactory/test/: CMakeLists.txt  test_udp_socket_factory.cpp
Common/Utils/: CMakeLists.txt
Common/Utils/Serializer/: CMakeLists.txt
Common/Utils/Serializer/include/: serializer.h
Common/Utils/Serializer/src/: serializer.cpp
Common/Utils/Serializer/test/: CMakeLists.txt  test_serializer.cpp
Server/: CMakeLists.txt
Server/MessageHandler/: CMakeLists.txt
Server/MessageHandler/include/: messageHandler.h
Server/MessageHandler/src/: messageHandler.cpp
Server/MessageHandler/test/: CMakeLists.txt  test_message_handler.cpp
Server/include/: faceDetectionUdpServer.h  faceRecognitionUdpServer.h  udpServer.h
Server/src/: faceDetectionUdpServer.cpp  faceRecognitionUdpServer.cpp  udpServer.cpp
assets/: CMakeLists.txt  assets.cmake  assets.h.in
assets/include/: assets.h
cmake/: boost.cmake  coverage.cmake  dependencies.cmake  gtest.cmake  opencv.cmake  threads.cmake
scripts/: build_coverage.sh  build_debug.sh  build_release.sh  build_windows.ps1  dependencies.sh  dependencies_macos.sh  run_tests.sh  windows.ps1
